Funzione numeri random + inserimento input e condizioni

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <body>
 
     <h1 id="stampa"></h1>
+    <h3>Inserisci un numero da 1 a 100</h3>
+
 
     <script type="text/javascript" src="js/script.js">
     </script>
