Creato ciclo con variabile esterna, da modificare

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
   <body>
 
-    <h1 id="stampa"></h1>
-    <h3>Inserisci un numero da 1 a 100</h3>
 
+    <h3>Inserisci un numero da 1 a 100</h3>
+    <ol id="stampa">
+
+    </ol>
 
     <script type="text/javascript" src="js/script.js">
     </script>
