Esercizio bonus: Inserimento scelta livello da parte dell'utente - Minima parte di layout con output dei numeri generati dalla cpu e dai numeri scelti dall'utente - gestione casi limite & controllo inserimento dati da parte dell'utente. Esercizio finito.

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -5,7 +5,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Campominato by Christian Pucci</title>
+    <title>Campominato BONUS by Christian Pucci</title>
     <link rel="stylesheet" href="css/style.css">
 
   </head>
@@ -15,8 +15,10 @@
     <div class="container">
 
       <h1>Regole del gioco</h1>
-      <h3>Il computer crea 16 mine associate ad un numero da 1 a 100.<br>Ti verrà chiesto di inserire un numero da 1 a 100,<br>se riuscirai a non "calpestare" le mine avrai vinto, altrimenti...<br>
+      <h3>Il computer crea 16 mine associate ad un numero da 1 fino al livello che scegli.<br>Livello 1-100 Livello 2-80 Livello-3 50<br>Ti verrà chiesto di inserire un numero da 1 fino al livello che hai scelto,<br>se riuscirai a non "calpestare" le mine avrai vinto, altrimenti...<br>
       avrò vinto io!</h3>
+
+      <h2 id="livello"></h2>
 
     </div>
     <div class="container">
